--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,69 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container {
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  flex-direction: column;
+  padding: 20px;
+}
+.wrapper {
+  background-color: black;
   color: white;
+
+  width: 240px;
+  padding: 10px;
+  border-radius: 12px;
+
+  display: grid;
+  grid-template-rows: 60px 1fr;
 }
 
-.App-link {
-  color: #61dafb;
+.screen {
+  font-size: 24px;
+  text-align: end;
+  margin: 0;
+  padding: 15px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.buttons {
+  display: grid;
+  grid-template-areas:
+    "clear clear clear ."
+    ". . . ."
+    ". . . ."
+    ". . . ."
+    "zero zero . .";
+  gap: 7px;
+}
+
+.btn {
+  border-radius: 50%;
+  height: 50px;
+  width: 50px;
+  color: white;
+  background-color: #2e2e2e;
+  border: none;
+}
+
+.btn:hover {
+  cursor: pointer;
+}
+
+.clear {
+  background-color: #9a9a9a;
+  color: black;
+  grid-area: clear;
+}
+
+.wide {
+  border-radius: 25px;
+  width: auto;
+}
+
+.zero {
+  padding-left: 20px;
+  text-align: start;
+  grid-area: zero;
+}
+
+.operator {
+  background-color: #ff9429;
 }
